@@ -2,10 +2,12 @@ requires 'perl' => '5.008001';
 requires 'locale';
 requires 'sort';
 requires 'Carp';
+requires 'Fcntl';
 requires 'Exporter' => '5.57';
 requires 'Path::ExpandTilde';
 requires 'File::Spec';
 requires 'Sort::filevercmp';
+requires 'Text::Glob';
 test_requires 'File::pushd';
 test_requires 'File::Temp';
 test_requires 'Test::More' => '0.88';
